--- a/.storybook/preview-body.html
+++ b/.storybook/preview-body.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" />
 <style>
   #root {
     padding: 20px;
