--- a/.storybook/preview-body.html
+++ b/.storybook/preview-body.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" />
-<style>
+<!-- <style>
   #root {
     padding: 20px;
   }
-</style>
+</style> -->
